<resources>
    <string name="app_name" translatable="false">FERG Food</string>
    <string name="default_avatar">https://firebasestorage.googleapis.com/v0/b/project-9122886501087922816.appspot.com/o/default_avatar.png?alt=media&amp;token=0de6dcbb-7572-47e9-bfba-f31b551b8779</string>
    <string name="edit_user_profile_activity_title">Edit profile</string>
    <string name="title_activity_show_favourites">Favourites</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_reservations">Reservations</string>
    <string name="title_activity_edit_availability">Today availability</string>
    <string name="title_activity_edit_restaurant_profile">Edit profile</string>
    <string name="title_activity_edit_menu">Edit menu</string>
    <string name="title_activity_edit_dish">Edit dish</string>
    <string name="title_activity_new_dish">New dish</string>
    <string name="title_activity_edit_offer">Edit offer</string>
    <string name="title_activity_edit_offers">Edit offers</string>
    <string name="title_activity_new_offer">New offer</string>
    <string name="dishPhoto">Photo</string>
    <string name="dishName">Name of the dish</string>
    <string name="dishPrice">Price</string>
    <string name="dishType">Dish type</string>
    <string name="offer_image">Offer image</string>
    <string name="offerName">Name of the offer</string>
    <string name="notesOffer">Notes</string>
    <string name="money_value" translatable="false">€</string>
    <string name="offerPrice">Price</string>
    <string name="weeklyreapeted">Apply on</string>
    <string name="day_monday">Mo</string>
    <string name="day_tuedsday">Tu</string>
    <string name="day_wednesday">We</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">Fr</string>
    <string name="day_saturday">Sa</string>
    <string name="day_sunday">Su</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_with_col">&#8226; Phone number:</string>
    <string name="address">Address</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="covers">Covers</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="done">Done</string>
    <string name="closed">Closed</string>
    <string name="opening_time">Opening time:</string>
    <string name="orarioApertura">Start Time</string>
    <string name="orarioChiusura">End Time</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="listaVuota">Empty List</string>
    <string name="msgListaVuotaPiatti">Add here new dishes</string>
    <string name="msgListaVuotaOfferte">Add here new offers</string>
    <string name="attenzione">Attention</string>
    <string name="notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="calendar">Calendar</string>
    <string name="table">Table</string>
    <string name="table_with_orders">Table with orders</string>
    <string name="takeaway" translatable="false">Take-away</string>
    <string name="seats">&#8226; Reserved seats:</string>
    <string name="dishes">Dishes details</string>
    <string name="dishes_details">&#8226; Dishes details:</string>
    <string name="offers_details">&#8226; Offers details:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="deleted">Deleted</string>
    <string name="verified">VERIFIED</string>
    <string name="reservationExpired">This reservation is expired</string>
    <string name="reservationVerified">This reservation is verified</string>
    <string name="rejectReasonText">Please indicate a reason:</string>
    <string name="yournotes">&#8226; Your notes:</string>
    <string name="student">Student</string>
    <string name="professor">Professor</string>
    <string name="adm_employee">Administrative employee</string>
    <string name="pick_date">Pick a date!</string>
    <string name="pick_time">Pick a time!</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="jenuary">Jenuary</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="ausgust">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="are_you_staying">Eat in or take-away?</string>
    <string name="howmany">How many seats do you want to book?</string>
    <string name="take_photo">Take a photo</string>
    <string name="chose_library">Choose from gallery</string>
    <string name="remove">Remove</string>
    <string name="add_photo">Add a new photo</string>
    <string name="titolo_main_activity">Restaurant finder</string>
    <string name="titolo_ricerca">Find your restaurant:</string>
    <string name="info_ricerca">(make searches by name of restaurant, dish or by address)</string>
    <string name="titolo_offerte_vicine">Some offers near you ...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eseguireLogin">Please, log in</string>
    <string name="prenotazioni">Reservations</string>
    <string name="contattaci">Contact us</string>
    <string name="segnala_problema">Segnala Problema</string>
    <string name="favoriti">Favourites</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="first">Main courses</string>
    <string name="second">Second courses</string>
    <string name="dessert" translatable="false">Dessert</string>
    <string name="other">Other</string>
    <string name="offers">Offers</string>
    <string name="otherDishesAvailable">(other dishes are available)</string>
    <string name="titolo_elaborazioneRicerche">Search Results</string>
    <string name="risultati_ricerca">Search results:</string>
    <string name="search">Search</string>
    <string name="titoloLocaleDefault">Name unavailable</string>
    <string name="tipoLocaleFinder">Type of local:</string>
    <string name="costoFinder">Cost:</string>
    <string name="valutazioneFinder">Rating:</string>
    <string name="ricercaAvanzata">Advanced Search:</string>
    <string name="takeAway">Take-Away</string>
    <string name="restaurant">Restaurant</string>
    <string name="takeAway_Restaurant">Take Away &amp; Restaurant</string>
    <string name="noServices">No Services</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="dataSaved">Data has been saved</string>
    <string name="error" translatable="false">Warning</string>
    <string name="exceptionError">Sorry, an error occurred</string>
    <string name="error_complete">Please, complete correctly all fields</string>
    <string name="gallery_activity_title">Gallery</string>
    <string name="add_userphoto_activity_title">Add a new photo</string>
    <string name="query_troppo_lunga">Search key too long!</string>
    <string name="query_troppo_corta">Search key too short!</string>
    <string name="nessun_risultato">No restaurants found</string>
    <string name="timeout_expired">Timeout expired</string>
    <string name="login_failed">Incorrect username or password, please retry</string>
    <string name="check_pwd">Passwords doesn\'t correspond!</string>
    <string name="wrong_email_format">Wrong email format!</string>
    <string name="pwd_too_short">Password too short! Use at least 6 characters.</string>
    <string name="completa_registrazione">Personal informations are mandatory</string>
    <string name="connection_error">Connection Error</string>
    <string name="review_published_failed">Saving review failed</string>
    <string name="photo_send_error">Sending photo failed</string>
    <string name="reservation_added_failed">Reservation request failed</string>
    <string name="dataSaved_failed">Data saving failed</string>
    <string name="seats_string">seats</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="closed_restaurant">The restaurant is closed </string>
    <string name="your_reservation">Your reservation</string>
    <string name="total">Total :</string>
    <string name="notes">Notes for the restaurant:</string>
    <string name="offer">Offer</string>
    <string name="dish">Dish</string>
    <string name="quantity">Quantity</string>
    <string name="offer_name">Offer name:</string>
    <string name="details">Details:</string>
    <string name="available_on">Available on:</string>
    <string name="sunday_abb">Su</string>
    <string name="saturday_abb">Sa</string>
    <string name="friday_abb">Fr</string>
    <string name="thursday_abb">Th</string>
    <string name="wednesday_abb">We</string>
    <string name="tuesday_abb">Tu</string>
    <string name="monday_abb">Mo</string>
    <string name="no_item_in_order">Please, select a dish</string>
    <string name="today_not_available">Not available </string>
    <string name="open_restaurant">Now the restaurant is open!</string>
    <string name="additional_info">Additional Info</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="features">Features:</string>
    <string name="wifi" translatable="false">WiFi</string>
    <string name="creditcard">Creditcard payment</string>
    <string name="reservation">Reservations</string>
    <string name="parking">Parking</string>
    <string name="bancomat" translatable="false">Bancomat</string>
    <string name="seatsoutside">Seats outside</string>
    <string name="music">Music</string>
    <string name="reviews_activity_title">Reviews</string>
    <string name="toast_when_sorted">Results has been sorted</string>
    <string name="description">Description</string>
    <string name="send_mail">Send mail</string>
    <string name="no_email_client">There is no email client installed</string>
    <string name="numReviewsText">Average rank on % reviews</string>
    <string name="orderBy">Order</string>
    <string name="add_review_activity_title">Add review</string>
    <string name="long_text">
</string>
    <string name="review">Review:</string>
    <string name="reviewsStrPrev">% reviews</string>
    <string name="click_stars">Touch the stars to rate this restaurant</string>
    <string name="password" translatable="false">Password</string>
    <string name="email_registrazione" translatable="false">email@example.com</string>
    <string name="esegui_login">Login</string>
    <string name="esegui_regitrazione">User Registration</string>
    <string name="registrazione_ristorante">Register your business</string>
    <string name="modifica_profilo">Edit profile</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
</resources>