<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/esegui_login"
            android:title="@string/esegui_login" />
        <item
            android:id="@+id/esegui_registrazione"
            android:title="@string/esegui_regitrazione"/>
        <item
            android:id="@+id/esegui_registrazione_ristorante"
            android:title="@string/registrazione_ristorante"/>
    </group>

    <item android:title="Comunicazioni">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:title="@string/contattaci" />
            <item
                android:id="@+id/nav_bugs"
                android:title="@string/segnala_problema" />
        </menu>
    </item>

</menu>