<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context="it.polito.mad_lab4.user.EditUserProfileActivity">

    <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <android.support.v7.widget.CardView

            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="4dp"
            android:minHeight="64dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"

            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"


            android:orientation="vertical">


            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/rectangle_editext"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:id="@+id/name"
                android:allowUndo="false" />

            <TextView
                android:layout_width="250dp"

                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/your_email" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"

                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="@drawable/rectangle_editext"
                android:id="@+id/editText" />

            <TextView
                android:layout_width="250dp"

                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/subject" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="@drawable/rectangle_editext"
                android:id="@+id/editText2" />

            <TextView
                android:layout_width="250dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:background="@drawable/rectangle_editext"
                android:maxLines="6"

                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:minLines="6"
                android:id="@+id/editText3" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/button" />

        </LinearLayout>
        </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>