<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <include android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/login_failed_message"
                android:layout_height="wrap_content"
                android:textColor="@color/bad"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_failed"
                android:visibility="gone"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                card_view:cardCornerRadius="4dp"
                android:minHeight="64dp"
                card_view:cardUseCompatPadding="true"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/usernameLL">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:id="@+id/imageView2"
                            android:src="@drawable/ic_user_grey"
                            android:alpha="0.7" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/usernameET"
                            android:textColor="@android:color/black"
                            android:background="@android:color/transparent"
                            android:hint="@string/email_registrazione"
                            android:padding="5dp"
                            android:inputType="textEmailAddress"/>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="#20000000"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/emailLL"
                        android:longClickable="true">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_password_grey"
                            android:cropToPadding="false"
                            android:padding="2dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/passwordET"
                            android:textColor="@android:color/black"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:padding="5dp"
                            android:inputType="textPassword" />
                        </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                card_view:cardCornerRadius="4dp"
                android:minHeight="64dp"
                card_view:cardUseCompatPadding="true"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:onClick="eseguiLogin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LOGIN"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    />
            </android.support.v7.widget.CardView>

            <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Username rappresenta la propria mail di registrazione)\nUsername: group9madlab4@gmail.com\nPassword: madlab"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>